{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 20,
  "lineage": "fc6f1267-915e-d66a-8768-d7222f61f241",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04230c2a87ca29e44",
            "domain": "vpc",
            "id": "eipalloc-04230c2a87ca29e44",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-62-248.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.62.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:426310392593:internet-gateway/igw-09a8c92cc9f71a7a0",
            "id": "igw-09a8c92cc9f71a7a0",
            "owner_id": "426310392593",
            "vpc_id": "vpc-0c0e7d54601ebb991"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04230c2a87ca29e44",
            "connectivity_type": "public",
            "id": "nat-0d970adc2cdba4921",
            "network_interface_id": "eni-0734b07c4eb0e64d2",
            "private_ip": "10.0.1.15",
            "public_ip": "3.13.62.248",
            "subnet_id": "subnet-01ed98c598844be78"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:426310392593:route-table/rtb-0b9ff9633ff986865",
            "id": "rtb-0b9ff9633ff986865",
            "owner_id": "426310392593",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d970adc2cdba4921",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0e7d54601ebb991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.NAT-GW",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:426310392593:route-table/rtb-0e0e2d1bee8e0e9b2",
            "id": "rtb-0e0e2d1bee8e0e9b2",
            "owner_id": "426310392593",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a8c92cc9f71a7a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0e7d54601ebb991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivRTAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb885e3f1de5bd8d",
            "route_table_id": "rtb-0b9ff9633ff986865",
            "subnet_id": "subnet-0a49e853101449733"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.privRT",
            "aws_subnet.myprivatesubnet",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRTAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2ecfc33200efbe6",
            "route_table_id": "rtb-0e0e2d1bee8e0e9b2",
            "subnet_id": "subnet-01ed98c598844be78"
          },
          "dependencies": [
            "aws_route_table.publRT",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myprivatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:426310392593:subnet/subnet-0a49e853101449733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a49e853101449733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "426310392593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c0e7d54601ebb991"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mypublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:426310392593:subnet/subnet-01ed98c598844be78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed98c598844be78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "426310392593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c0e7d54601ebb991"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:426310392593:vpc/vpc-0c0e7d54601ebb991",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037ff6b74d6cd74bf",
            "default_route_table_id": "rtb-0993c4597ca279cba",
            "default_security_group_id": "sg-08486bc498420fd68",
            "dhcp_options_id": "dopt-00e9018fbe9c3e938",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0e7d54601ebb991",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0993c4597ca279cba",
            "owner_id": "426310392593"
          }
        }
      ]
    }
  ]
}